--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "svelte-preprocess-sass": "^0.2.0"
   },
   "dependencies": {
+    "graph-data-structure": "^1.9.0",
     "just-debounce-it": "^1.1.0",
     "sirv-cli": "^0.4.4",
     "svelte-routing": "^1.4.0"
